@@ -68,6 +68,8 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
 
     public static boolean suppressWarnings = false;
 
+    private final boolean ignoreMetaComments;
+
     public static void setSuppressWarnings(boolean sw) {
         suppressWarnings = sw;
     }
@@ -105,11 +107,19 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
      */
     public NexusImporter(Reader reader) {
         super(reader);
+        this.ignoreMetaComments = false;
         setCommentDelimiters('[', ']', '\0', '\0', '&');
+    }
+
+    public NexusImporter(Reader reader, boolean ignoreMetaComments) {
+        super(reader);
+        this.ignoreMetaComments = ignoreMetaComments;
+        setCommentDelimiters('[', ']', '\0', '!', '&');
     }
 
     public NexusImporter(Reader reader, Writer commentWriter) {
         super(reader, commentWriter);
+        this.ignoreMetaComments = false;
         setCommentDelimiters('[', ']', '\0', '!', '&');
     }
 
@@ -1021,12 +1031,14 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
             length = readDouble(",():;");
 
             if (getLastMetaComment() != null) {
-                // There was a meta-comment which should be in the form:
-                // \[&label[=value][,label[=value]>[,/..]]\]
-                try {
-                    parseMetaCommentPairs(getLastMetaComment(), branch);
-                } catch (BadFormatException bfe) {
-                    // ignore it
+                if (!ignoreMetaComments) {
+                    // There was a meta-comment which should be in the form:
+                    // \[&label[=value][,label[=value]>[,/..]]\]
+                    try {
+                        parseMetaCommentPairs(getLastMetaComment(), branch);
+                    } catch (BadFormatException bfe) {
+                        // ignore it
+                    }
                 }
                 clearLastMetaComment();
             }
@@ -1068,12 +1080,14 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
         readToken(":(),;");
 
         if (getLastMetaComment() != null) {
-            // There was a meta-comment which should be in the form:
-            // \[&label[=value][,label[=value]>[,/..]]\]
-            try {
-                parseMetaCommentPairs(getLastMetaComment(), node);
-            } catch (BadFormatException bfe) {
-                // ignore it
+            if (!ignoreMetaComments) {
+                // There was a meta-comment which should be in the form:
+                // \[&label[=value][,label[=value]>[,/..]]\]
+                try {
+                    parseMetaCommentPairs(getLastMetaComment(), node);
+                } catch (BadFormatException bfe) {
+                    // ignore it
+                }
             }
             clearLastMetaComment();
         }
@@ -1123,12 +1137,14 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
         }
 
         if (getLastMetaComment() != null) {
-            // There was a meta-comment which should be in the form:
-            // \[&label[=value][,label[=value]>[,/..]]\]
-            try {
-                parseMetaCommentPairs(getLastMetaComment(), node);
-            } catch (BadFormatException bfe) {
-                // ignore it
+            if (!ignoreMetaComments) {
+                // There was a meta-comment which should be in the form:
+                // \[&label[=value][,label[=value]>[,/..]]\]
+                try {
+                    parseMetaCommentPairs(getLastMetaComment(), node);
+                } catch (BadFormatException bfe) {
+                    // ignore it
+                }
             }
             clearLastMetaComment();
         }
@@ -1306,6 +1322,31 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
         }
     }
 
+    public static boolean isInt(String str)
+    {
+        if (str == null) {
+            return false;
+        }
+        int length = str.length();
+        if (length == 0) {
+            return false;
+        }
+        int i = 0;
+        if (str.charAt(0) == '-') {
+            if (length == 1) {
+                return false;
+            }
+            i = 1;
+        }
+        for (; i < length; i++) {
+            char c = str.charAt(i);
+            if (c <= '/' || c >= ':') {
+                return false;
+            }
+        }
+        return true;
+    }
+
     /**
      * This method takes a string and tries to decode it returning the object
      * that best fits the data. It will recognize comma delimited lists enclosed
@@ -1376,10 +1417,14 @@ public class NexusImporter extends Importer implements SequenceImporter, TreeImp
         }
 
         // Attempt to format the value as an integer
-        try {
-            return new Integer(value);
-        } catch (NumberFormatException nfe1) {
-            // not an integer
+//        try {
+//            return new Integer(value);
+//        } catch (NumberFormatException nfe1) {
+//            // not an integer
+//        }
+        // throwing exception to test for an integer is slow
+        if (isInt(value)) {
+            return Integer.valueOf(value);
         }
 
         // Attempt to format the value as a double
